Working on splash

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <style name="Theme.Ovulio" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="SplashScreenTheme" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
