--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/SplashBG">
+
 
     <ImageView
         android:layout_width="200dp"
@@ -10,5 +12,9 @@
         android:src="@drawable/splashlogo"
         android:layout_centerInParent="true"
         android:id="@+id/splashlogo"
+
+
+
+        ></ImageView>
 
 </RelativeLayout>
