--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="SplashBG">#2B187</color>
+    <color name="SplashBG">#2B1876</color>
+    <color name="Primary">#F2C5C5</color>
+    <color name="BodyText">#5E5959</color>
+    <color name="HeadText">#2B1876</color>
 
 </resources>
