--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,5 +3,8 @@
 
     <style name="Theme.Ovulio" parent="android:Theme.Material.Light.NoActionBar" />
 
-    <style name="SplashScreenTheme" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="SplashScreenTheme" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:colorBackground">@color/SplashBG</item>
+
+    </style>
 </resources>
