Added onboard screens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="Primary">#F2C5C5</color>
     <color name="BodyText">#5E5959</color>
     <color name="HeadText">#2B1876</color>
+    <color name="WhiteBG">#FFFFFF</color>
 
 </resources>
