--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,42 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="72"
+    android:viewportHeight="72">
+  <group android:scaleX="0.76"
+      android:scaleY="0.76"
+      android:translateX="8.64"
+      android:translateY="8.64">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M0,0h72v72h-72z"
+        android:fillColor="#2B1876"/>
+    <path
+        android:pathData="M42.755,45.827C40.388,48.13 37.154,49.549 33.59,49.549C26.33,49.549 20.445,43.663 20.445,36.403C20.445,33.499 21.386,30.815 22.981,28.639C20.525,31.028 19,34.368 19,38.063C19,45.324 24.885,51.209 32.146,51.209C36.502,51.209 40.363,49.09 42.755,45.827Z"
+        android:fillColor="#CA868A"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M32.688,25.604m-1.625,0a1.625,1.625 0,1 1,3.25 0a1.625,1.625 0,1 1,-3.25 0"
+        android:fillColor="#B7EB54"/>
+    <path
+        android:pathData="M29.256,24.99C28.216,27.764 28.461,30.889 28.714,32.105C26.993,30.167 24.301,25.358 27.306,21.631C30.31,17.904 30.243,14.324 29.834,13C30.953,16.467 30.556,21.523 29.256,24.99Z"
+        android:fillColor="#CA868A"/>
+    <path
+        android:pathData="M37.202,25.857C32.232,28.891 32.073,32.779 32.615,34.344C32.615,32.293 36.997,29.204 39.188,27.916C43.406,24.102 42.679,18.092 41.788,15.564C42.33,17.731 42.171,22.823 37.202,25.857Z"
+        android:fillColor="#F2C5C5"/>
+    <path
+        android:pathData="M41.788,29.83C37.859,30.87 35.239,32.984 34.421,33.91C35.865,32.957 40.608,32.743 42.799,32.755C50.196,32.466 52.623,25.893 52.911,22.643C51.07,27.916 46.7,28.529 41.788,29.83Z"
+        android:fillColor="#F2C5C5"/>
+    <path
+        android:pathData="M43.486,35.716C39.527,34.416 35.793,35.174 34.421,35.716C35.059,35.716 37.425,36.164 41.788,37.955C46.151,39.747 51.021,37.209 52.911,35.716C51.684,36.511 48.433,37.341 43.486,35.716Z"
+        android:fillColor="#F2C5C5"/>
+    <path
+        android:pathData="M34.645,37.138C34.565,37.119 34.491,37.103 34.421,37.089C34.475,37.089 34.55,37.104 34.645,37.138C36.044,37.465 38.865,38.471 40.56,40.303C42.799,42.722 46.844,42.939 48.758,42.181C46.748,43.3 42.019,44.694 39.188,41.314C36.734,38.384 35.261,37.359 34.645,37.138Z"
+        android:fillColor="#F2C5C5"/>
+    <path
+        android:pathData="M30.773,31.915V28.963C30.898,29.497 30.971,30.543 30.773,31.915V54.64C30.701,53.184 30.311,49.628 29.329,47.056C28.101,43.842 27.162,40.881 29.329,36.475C30.167,34.77 30.588,33.2 30.773,31.915Z"
+        android:fillColor="#F2C5C5"/>
+    <path
+        android:pathData="M32.615,58.902V36.475C32.615,37.081 33.819,39.279 34.421,40.303C37.346,44.889 35.649,51.029 34.421,52.654C33.438,53.954 32.808,57.361 32.615,58.902Z"
+        android:fillColor="#F2C5C5"/>
+  </group>
 </vector>
