Created Login scrreen

--- a/app/src/main/res/layout/next_button.xml
+++ b/app/src/main/res/layout/next_button.xml
@@ -10,11 +10,8 @@
         android:id="@+id/nextButton"
         android:layout_width="164dp"
         android:layout_height="40dp"
-        android:layout_margin="4dp"
+        android:layout_gravity="center"
         android:background="@drawable/border_radius"
-        android:drawableEnd="@drawable/nextarrow"
-        android:gravity="center"
-        android:paddingRight="10dp"
         android:text="Next"
         android:theme="@style/nextButtonTheme"
         android:stateListAnimator="@null"
