--- a/app/src/main/res/layout/onboard3.xml
+++ b/app/src/main/res/layout/onboard3.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/OnboardTheme">
@@ -21,27 +21,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Onboard3Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Understand your chances of conception"
+        android:text="Let us know you better, Adheera!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/onboard3image" />
 
+    <TextView
+        android:id="@+id/Onboard3Body"
+        android:layout_width="196dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="98dp"
+        android:text="It's crucial to schedule your sexual life around your cycle. View daily insights to find out your chances of getting pregnant."
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onboard3image" />
+
     <include
-        android:id="@+id/OnlineOffline"
+        android:id="@+id/Onboard3Next"
         layout="@layout/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="139dp"
         android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
