--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="nextButtonTheme" parent="Widget.AppCompat.Button.Borderless" >
+    <style name="nextButtonTheme" parent="Widget.AppCompat.Button.Borderless" > //what is parent
         <item name="android:fontFamily">@font/nunito_sans</item>
         <item name="android:textAlignment">center</item>
         <item name="android:backgroundTint">@color/Primary</item>
@@ -25,5 +25,15 @@
     <style name="SplashScreenTheme" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowBackground">@color/SplashBG</item>
 
+
+
+    </style>
+
+    <style name="SignInTheme" >
+        <item name="android:fontFamily">@font/nunito_sans</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:background">@color/WhiteBG</item>
+        <item name="android:textColor">@color/PrimaryDark</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
