--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="56dp"
         android:text="Sign In"
+        android:fontFamily="@font/libre_baskerville"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SignInLogo"
         android:textSize="38sp"/>
