--- a/app/src/main/res/layout/activity_onboardreprod.xml
+++ b/app/src/main/res/layout/activity_onboardreprod.xml
@@ -9,51 +9,35 @@
 
 
     <ImageView
-        android:id="@+id/onboard3image"
+        android:id="@+id/onboardReprodImage"
         android:layout_width="303dp"
         android:layout_height="194dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="48dp"
-        android:src="@drawable/onboard3pic"
+        android:layout_marginTop="@dimen/marginTop"
+        android:src="@drawable/onboardreprodpic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/Onboard3Title"
+        android:id="@+id/OnboardreprodTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Understand your chances of conception"
+        android:text="@string/onboardReprod_Head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onboard3image" />
-
-    <TextView
-        android:id="@+id/Onboard3Body"
-        android:layout_width="196dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="98dp"
-        android:text="It's crucial to schedule your sexual life around your cycle. View daily insights to find out your chances of getting pregnant."
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onboard3image" />
+        app:layout_constraintTop_toBottomOf="@+id/onboardReprodImage" />
 
     <include
-        android:id="@+id/Onboard3Next"
+        android:id="@+id/OnboardReprodNext"
         layout="@layout/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="@dimen/marginBottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
