--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -12,7 +12,7 @@
         android:id="@+id/SignInLogo"
         android:layout_width="260dp"
         android:layout_height="140dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="@dimen/marginTop"
         android:src="@drawable/mainlogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:fontFamily="@font/libre_baskerville"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SignInLogo"
-        android:textSize="38sp"/>
+        android:textSize="@dimen/H1"/>
 
     <EditText
         android:id="@+id/EmailText"
