--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,14 +10,14 @@
         <item name="android:textAlignment">center</item>
         <item name="android:background">@color/WhiteBG</item>
         <item name="android:textColor">@color/BodyText</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">@dimen/H1</item>
     </style>
 
     <style name="nextButtonTheme" parent="Widget.AppCompat.Button.Borderless" >
         <item name="android:fontFamily">@font/nunito_sans</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/BodyText</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/H2</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -33,7 +33,7 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:background">@color/WhiteBG</item>
         <item name="android:textColor">@color/PrimaryDark</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/Body</item>
     </style>
 
     <style name="SignUpTheme" >
@@ -41,7 +41,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:background">@color/PrimaryLight</item>
         <item name="android:textColor">@color/BodyText</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/Body</item>
     </style>
 
     <style name="CustomCheckbox" parent="@style/Widget.AppCompat.CompoundButton.CheckBox">
